yeni smell türü ve ağ yağısı eklendi

--- a/Triplet NN Code.ipynb
+++ b/Triplet NN Code.ipynb
@@ -433,7 +433,11 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "[array([1, 1, 1, ..., 1, 1, 1], dtype=int64),\n array([2, 5, 5, ..., 2, 2, 2], dtype=int64),\n array([5, 5, 2, ..., 2, 2, 2], dtype=int64)]"
+      "text/plain": [
+       "[array([1, 1, 1, ..., 1, 1, 1], dtype=int64),\n",
+       " array([2, 5, 5, ..., 2, 2, 2], dtype=int64),\n",
+       " array([5, 5, 2, ..., 2, 2, 2], dtype=int64)]"
+      ]
      },
      "execution_count": 137,
      "metadata": {},
@@ -441,7 +445,11 @@
     },
     {
      "data": {
-      "text/plain": "[array([1, 1, 1, ..., 1, 1, 1], dtype=int64),\n array([2, 5, 5, ..., 2, 2, 2], dtype=int64),\n array([5, 5, 2, ..., 2, 2, 2], dtype=int64)]"
+      "text/plain": [
+       "[array([1, 1, 1, ..., 1, 1, 1], dtype=int64),\n",
+       " array([2, 5, 5, ..., 2, 2, 2], dtype=int64),\n",
+       " array([5, 5, 2, ..., 2, 2, 2], dtype=int64)]"
+      ]
      },
      "execution_count": 172,
      "metadata": {},
@@ -504,7 +512,9 @@
     },
     {
      "data": {
-      "text/plain": "<keras.callbacks.History at 0x25ae3dbdc30>"
+      "text/plain": [
+       "<keras.callbacks.History at 0x25ae3dbdc30>"
+      ]
      },
      "execution_count": 138,
      "metadata": {},
@@ -541,7 +551,9 @@
     },
     {
      "data": {
-      "text/plain": "<keras.callbacks.History at 0x25ae0920730>"
+      "text/plain": [
+       "<keras.callbacks.History at 0x25ae0920730>"
+      ]
      },
      "execution_count": 173,
      "metadata": {},
@@ -650,7 +662,15 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[  0.05170216, -21.117847  ],\n       [  0.35083055,  11.7853985 ],\n       [ -0.7663615 ,   7.741275  ],\n       ...,\n       [  0.05162948, -21.134188  ],\n       [  0.17648223,   8.566288  ],\n       [ -0.55646175,   9.458549  ]], dtype=float32)"
+      "text/plain": [
+       "array([[  0.05170216, -21.117847  ],\n",
+       "       [  0.35083055,  11.7853985 ],\n",
+       "       [ -0.7663615 ,   7.741275  ],\n",
+       "       ...,\n",
+       "       [  0.05162948, -21.134188  ],\n",
+       "       [  0.17648223,   8.566288  ],\n",
+       "       [ -0.55646175,   9.458549  ]], dtype=float32)"
+      ]
      },
      "execution_count": 142,
      "metadata": {},
@@ -658,7 +678,15 @@
     },
     {
      "data": {
-      "text/plain": "array([[-21.036894  ,  -4.4034395 ],\n       [  9.478342  ,   2.2317417 ],\n       [  4.4925876 ,   2.7020884 ],\n       ...,\n       [-21.050306  ,  -4.4068284 ],\n       [ 10.854581  ,  -0.21599801],\n       [  8.0583    ,   3.4296262 ]], dtype=float32)"
+      "text/plain": [
+       "array([[-21.036894  ,  -4.4034395 ],\n",
+       "       [  9.478342  ,   2.2317417 ],\n",
+       "       [  4.4925876 ,   2.7020884 ],\n",
+       "       ...,\n",
+       "       [-21.050306  ,  -4.4068284 ],\n",
+       "       [ 10.854581  ,  -0.21599801],\n",
+       "       [  8.0583    ,   3.4296262 ]], dtype=float32)"
+      ]
      },
      "execution_count": 177,
      "metadata": {},
@@ -730,7 +758,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
